--- a/educa/courses/templates/base.html
+++ b/educa/courses/templates/base.html
@@ -14,6 +14,7 @@
           <li>
             <form action="{% url "logout" %}" method="post">
               <button type="submit">Sign out</button>
+              {% csrf_token %}
             </form>
           </li>
         {% else %}
