adding student work

--- a/educa/students/templates/students/course/work/list.html
+++ b/educa/students/templates/students/course/work/list.html
@@ -19,4 +19,63 @@
       </p>
     {% endfor %}
   </div>
+  </div>
+  <h3>Add new content:</h3>
+  <ul class="content-types">
+    <li>
+      <a href="{% url "work_content_create" course_id "text" %}">
+        Text
+      </a>
+    </li>
+    <li>
+      <a href="{% url "work_content_create" course_id "image" %}">
+        Image
+      </a>
+    </li>
+    <li>
+      <a href="{% url "work_content_create" course_id "video" %}">
+        Video
+      </a>
+    </li>
+    <li>
+      <a href="{% url "work_content_create" course_id "file" %}">
+        File
+      </a>
+    </li>
+  </ul>
+  </div>
+
+{% endblock %}
+
+
+{% block include_js %}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5sortable/0.13.3/html5sortable.min.js"></script>
+{% endblock %}
+
+{% block domready %}
+  var options = {
+      method: 'POST',
+      mode: 'same-origin'
+  }
+
+  const contentOrderUrl = '{% url "content_order" %}';
+
+  sortable('#module-contents', {
+    forcePlaceholderSize: true,
+    placeholderClass: 'placeholder'
+  })[0].addEventListener('sortupdate', function(e) {
+
+    contentOrder = {};
+    var contents = document.querySelectorAll('#module-contents div');
+    contents.forEach(function (content, index) {
+      // update content index
+      contentOrder[content.dataset.id] = index;
+    });
+
+    // add new order to the HTTP request options
+    options['body'] = JSON.stringify(contentOrder);
+    
+    // send HTTP request
+    fetch(contentOrderUrl, options)
+  });
 {% endblock %}
