--- a/educa/students/templates/students/course/work/list.html
+++ b/educa/students/templates/students/course/work/list.html
@@ -7,8 +7,8 @@
   <div class="module">
     {% for work in object_list %}
       <div class="course-info">
-        <h3>{{ work.title }}</h3>
-        <p><a href="{% url "student_work_detail" course.id %}">
+        <h3> {{ work.title }}</h3>
+        <p><a href="{% url "student_work_detail" work.course_id work.id %}">
         Access work</a></p>
       </div>
     {% empty %}
@@ -20,7 +20,7 @@
     {% endfor %}
   </div>
   </div>
-  <h3>Add new content:</h3>
+  <h3>Add new work:</h3>
   <ul class="content-types">
     <li>
       <a href="{% url "work_content_create" course_id "text" %}">
