instructor can view student work

--- a/educa/courses/templates/courses/manage/course/list.html
+++ b/educa/courses/templates/courses/manage/course/list.html
@@ -17,6 +17,7 @@
               Manage contents
             </a>
           {% endif %}
+          <a href="{% url "course_work_list" course.id %}">Work</a>
         </p>
       </div>
     {% empty %}
