--- a/educa/courses/templates/courses/manage/course/work/detail.html
+++ b/educa/courses/templates/courses/manage/course/work/detail.html
@@ -11,19 +11,16 @@
   </h1>
   <div class="contents">
     <h3>
-      <a href="{% url "student_work_list" work.course_id %}">
+      <a href="{% url "course_work_list" work.course_id %}">
         Return to work list
-      </a>
-    </h3>
-    <h3>
-      <a href="{% url "chat:course_chat_room" object.id %}">
-        Course chat room
       </a>
     </h3>
   </div>
   <div class="module">
         {% with item=work.item %}
           <h2>{{ item.title }}</h2>
+          <p>Submitted by: {{ item.owner }}</p>
+          <p>Submit date: {{ item.created }}</p>
           {{ item.render }}
         {% endwith %}
   </div>
