--- a/educa/students/templates/students/course/list.html
+++ b/educa/students/templates/students/course/list.html
@@ -1,23 +1,24 @@
 {% extends "base.html" %}
+{% load i18n static %}
 
-{% block title %}My courses{% endblock %}
+{% block title %}{% translate "My courses" %}{% endblock %}
 
 {% block content %}
-  <h1>My courses</h1>
+  <h1>{% translate "My courses" %}</h1>
   <div class="module">
     {% for course in object_list %}
       <div class="course-info">
         <h3>{{ course.title }}</h3>
         <p><a href="{% url "student_course_detail" course.id %}">
-        Access contents</a></p>
+          {% translate "Access contents" %}</a></p>
         <p><a href="{% url "student_work_list" course.id %}">
-          Completed work</a></p>
+          {% translate "Completed work" %}</a></p>
       </div>
     {% empty %}
       <p>
-        You are not enrolled in any courses yet.
-        <a href="{% url "course_list" %}">Browse courses</a>
-        to enroll in a course.
+        {% translate "You are not enrolled in any courses yet" %}.
+        <a href="{% url "course_list" %}">{% translate "Browse courses" %}</a>
+        {% translate "to enroll in a course" %}.
       </p>
     {% endfor %}
   </div>
