--- a/educa/courses/templates/courses/course/detail.html
+++ b/educa/courses/templates/courses/course/detail.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load i18n static %}
 
 {% block title %}
   {{ object.title }}
@@ -10,23 +11,23 @@
       {{ object.title }}
     </h1>
     <div class="module">
-      <h2>Overview</h2>
+      <h2>{% translate "Overview" %}</h2>
       <p>
         <a href="{% url "course_list_subject" subject.slug %}">
         {{ subject.title }}</a>.
-        {{ object.modules.count }} modules.
-        Instructor: {{ object.owner}}
+        {{ object.modules.count }} {% translate "modules" %}.
+        {% translate "Instructor" %}: {{ object.owner}}
       </p>
       {{ object.overview|linebreaks }}
       {% if request.user.is_authenticated %}
         <form action="{% url "student_enroll_course" %}" method="post">
           {{ enroll_form }}
           {% csrf_token %}
-          <input type="submit" value="Enroll now">
+          <input type="submit" value="{% translate "Enroll now" %}">
         </form>
       {% else %}
         <a href="{% url "student_registration" %}" class="button">
-          Register to enroll
+          {% translate "Register to enroll" %}
         </a>
       {% endif %}
     </div>
