--- a/educa/courses/templates/courses/course/list.html
+++ b/educa/courses/templates/courses/course/list.html
@@ -1,26 +1,27 @@
 {% extends "base.html" %}
+{% load i18n static %}
 
 {% block title %}
   {% if subject %}
-    {{ subject.title }} courses
+    {{ subject.title }} {% translate "courses" %}
   {% else %}
-    All courses
+  {% translate "All courses" %}
   {% endif %}
 {% endblock %}
 
 {% block content %}
   <h1>
     {% if subject %}
-      {{ subject.title }} courses
+      {{ subject.title }} {% translate "courses" %}
     {% else %}
-      All courses
+    {% translate "All courses" %}
     {% endif %}
   </h1>
   <div class="contents">
-    <h3>Subjects</h3>
+    <h3>{% translate "Subjects" %}</h3>
     <ul id="modules">
       <li {% if not subject %}class="selected"{% endif %}>
-        <a href="{% url "course_list" %}">All</a>
+        <a href="{% url "course_list" %}">{% translate "All" %}</a>
       </li>
       {% for s in subjects %}
         <li {% if subject == s %}class="selected"{% endif %}>
@@ -28,7 +29,7 @@
             {{ s.title }}
             <br>
             <span>
-              {{ s.total_courses }} course{{ s.total_courses|pluralize }}
+              {{ s.total_courses }} {% translate "course" %}{{ s.total_courses|pluralize }}
             </span>
           </a>
         </li>
@@ -45,8 +46,8 @@
         </h3>
         <p>
           <a href="{% url "course_list_subject" subject.slug %}">{{ subject }}</a>.
-            {{ course.total_modules }} modules.
-            Instructor: {{ course.owner }}
+            {{ course.total_modules }} {% translate "modules" %}.
+            {% translate "Instructor" %}: {{ course.owner }}
         </p>
       {% endwith %}
     {% endfor %}
