--- a/educa/courses/templates/courses/manage/course/form.html
+++ b/educa/courses/templates/courses/manage/course/form.html
@@ -1,27 +1,28 @@
 {% extends "base.html" %}
+{% load i18n static %}
 
 {% block title %}
   {% if object %}
-    Edit course "{{ object.title }}"
+  {% translate "Edit course" %} "{{ object.title }}"
   {% else %}
-    Create a new course
+  {% translate "Create a new course" %}
   {% endif %}
 {% endblock %}
 
 {% block content %}
   <h1>
     {% if object %}
-      Edit course "{{ object.title }}"
+    {% translate "Edit course" %} "{{ object.title }}"
     {% else %}
-      Create a new course
+    {% translate "Create a new course" %}
     {% endif %}
   </h1>
   <div class="module">
-    <h2>Course info</h2>
+    <h2>{% translate "Course info" %}</h2>
     <form method="post">
       {{ form.as_p }}
       {% csrf_token %}
-      <p><input type="submit" value="Save course"></p>
+      <p><input type="submit" value="{% translate "Save course" %}"></p>
     </form>
   </div>
 {% endblock %}
