--- a/educa/courses/templates/courses/manage/course/list.html
+++ b/educa/courses/templates/courses/manage/course/list.html
@@ -1,30 +1,31 @@
 {% extends "base.html" %}
+{% load i18n static %}
 
-{% block title %}My courses{% endblock %}
+{% block title %}{% translate "My courses" %}{% endblock %}
 
 {% block content %}
-  <h1>My courses</h1>
+  <h1>{% translate "My courses" %}</h1>
   <div class="module">
     {% for course in object_list %}
       <div class="course-info">
         <h3>{{ course.title }}</h3>
         <p>
-          <a href="{% url "course_edit" course.id %}">Edit</a>
-          <a href="{% url "course_delete" course.id %}">Delete</a>
-          <a href="{% url "course_module_update" course.id %}">Edit modules</a>
+          <a href="{% url "course_edit" course.id %}">{% translate "Edit" %}</a>
+          <a href="{% url "course_delete" course.id %}">{% translate "Delete" %}</a>
+          <a href="{% url "course_module_update" course.id %}">{% translate "Edit modules" %}</a>
           {% if course.modules.count > 0 %}
             <a href="{% url "module_content_list" course.modules.first.id %}">
-              Manage contents
+              {% translate "Manage contents" %}
             </a>
           {% endif %}
-          <a href="{% url "course_work_list" course.id %}">Work</a>
+          <a href="{% url "course_work_list" course.id %}">{% translate "Work" %}</a>
         </p>
       </div>
     {% empty %}
-      <p>You haven't created any courses yet.</p>
+      <p>{% translate "You haven't created any courses yet" %}.</p>
     {% endfor %}
     <p>
-      <a href="{% url "course_create" %}" class="button">Create new course</a>
+      <a href="{% url "course_create" %}" class="button">{% translate "Create new course" %}</a>
     </p>
   </div>
 {% endblock %}
