--- a/educa/courses/templates/courses/manage/course/work/detail.html
+++ b/educa/courses/templates/courses/manage/course/work/detail.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load i18n static %}
 {% load cache %}
 
 {% block title %}
@@ -12,15 +13,15 @@
   <div class="contents">
     <h3>
       <a href="{% url "course_work_list" work.course_id %}">
-        Return to work list
+        {% translate "Return to work list" %}
       </a>
     </h3>
   </div>
   <div class="module">
         {% with item=work.item %}
           <h2>{{ item.title }}</h2>
-          <p>Submitted by: {{ item.owner }}</p>
-          <p>Submit date: {{ item.created }}</p>
+          <p>{% translate "Submitted by" %}: {{ item.owner }}</p>
+          <p>{% translate "Submit date" %}: {{ item.created }}</p>
           {{ item.render }}
         {% endwith %}
   </div>
