--- a/educa/courses/templates/registration/logged_out.html
+++ b/educa/courses/templates/registration/logged_out.html
@@ -1,13 +1,14 @@
 {% extends "base.html" %}
+{% load i18n static %}
 
-{% block title %}Logged out{% endblock %}
+{% block title %}{% translate "Logged out" %}{% endblock %}
 
 {% block content %}
-  <h1>Logged out</h1>
+  <h1>{% translate "Logged out" %}</h1>
   <div class="module">
     <p>
-      You have been successfully logged out.
-      You can <a href="{% url "login" %}">log-in again</a>.
+      {% translate "You have been successfully logged out" %}.
+      {% translate "You can" %} <a href="{% url "login" %}">{% translate "log-in again" %}</a>.
     </p>
   </div>
 {% endblock %}
