--- a/educa/courses/templates/registration/login.html
+++ b/educa/courses/templates/registration/login.html
@@ -1,20 +1,21 @@
 {% extends "base.html" %}
+{% load i18n static %}
 
-{% block title %}Log-in{% endblock %}
+{% block title %}{% translate "Log-in" %}{% endblock %}
 {% block content %}
-  <h1>Log-in</h1>
+  <h1>{% translate "Log-in" %}</h1>
   <div class="module">
     {% if form.errors %}
-      <p>Your username and password didn't match. Please try again.</p>
+      <p>{% translate "Your username and password didn't match. Please try again." %}</p>
     {% else %}
-      <p>Please, use the following form to log-in:</p>
+      <p>{% translate "Please, use the following form to log-in" %}:</p>
     {% endif %}
     <div class="login-form">
       <form action="{% url 'login' %}" method="post">
         {{ form.as_p }}
         {% csrf_token %}
         <input type="hidden" name="next" value="{{ next }}" />
-        <p><input type="submit" value="Log-in"></p>
+        <p><input type="submit" value="{% translate "Log-in" %}"></p>
       </form>
     </div>
   </div>
