--- a/educa/students/templates/students/course/work/form.html
+++ b/educa/students/templates/students/course/work/form.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
+{% load i18n static %}
 
 {% block title %}
   {% if object %}
-    Edit content "{{ object.title }}"
+  {% translate "Edit content" %} "{{ object.title }}"
   {% else %}
-    Add new content
+  {% translate "Add new content" %}
   {% endif %}
 {% endblock %}
 
@@ -17,7 +18,7 @@
     {% endif %}
   </h1>
   <div class="module">
-    <h2>Course info</h2>
+    <h2>{% translate "Course info" %}</h2>
     <form action="" method="post" enctype="multipart/form-data">
       {{ form.as_p }}
       {% csrf_token %}
