--- a/educa/students/templates/students/student/registration.html
+++ b/educa/students/templates/students/student/registration.html
@@ -1,19 +1,20 @@
 {% extends "base.html" %}
+{% load i18n static %}
 
 {% block title %}
-  Sign up
+{% translate "Sign up" %}
 {% endblock %}
 
 {% block content %}
   <h1>
-    Sign up
+    {% translate "Sign up" %}
   </h1>
   <div class="module">
-    <p>Enter your details to create an account:</p>
+    <p>{% translate "Enter your details to create an account" %}:</p>
     <form method="post">
       {{ form.as_p }}
       {% csrf_token %}
-      <p><input type="submit" value="Create my account"></p>
+      <p><input type="submit" value="{% translate "Create my account" %}"></p>
     </form>
   </div>
 {% endblock %}
