--- a/educa/chat/templates/chat/room.html
+++ b/educa/chat/templates/chat/room.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
+{% load i18n static %}
 
-{% block title %}Chat room for "{{ course.title }}"{% endblock %}
+{% block title %}{% translate "Chat room for" %} "{{ course.title }}"{% endblock %}
 
 {% block content %}
   <div id="chat">
@@ -18,7 +19,7 @@
   </div>
   <div id="chat-input">
     <input id="chat-message-input" type="text">
-    <input id="chat-message-submit" type="submit" value="Send">
+    <input id="chat-message-submit" type="submit" value="{% translate "Send" %}">
   </div>
 {% endblock %}
 
