translate models and urls

--- a/educa/courses/templates/courses/manage/module/content_list.html
+++ b/educa/courses/templates/courses/manage/module/content_list.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 {% with course=module.course %}
-  <h1>Course "{{ course.title }}"</h1>
+  <h1>{% translate "Course" %} "{{ course.title }}"</h1>
   <div class="contents">
     <h3>{% translate "Modules" %}</h3>
     <ul id="modules">
